Fix alignment for filter menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,13 +136,12 @@ div#backd input[type="submit"]{
 .fullHeight {
     margin-left: 20px;
 }
-#searchPanel{
+#searchPanel {
     background: white;
     overflow-y: scroll;
     max-height: 80vh;
     padding-top: 10px;
     margin-left: 55px;
-    margin-top: 20px;
     border-radius: 8px;
     border: 1px solid #cccccc;
 }
